# hybrid-delivery-router

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: scenario-format.md  technical_notes.md
examples/: run_demo.py
notebooks/: hybrid_delivery_router.ipynb
scripts/: validate.py
src/hybrid_delivery_router/: __init__.py  agent.py  api.py  cli.py  disruptions.py  domain.py  evaluation.py  fuzzy.py  journeys.py  map_model.py  planner.py  scenarios.py  scoring.py  tracing.py
src/hybrid_delivery_router/data/: box-hill-synthetic.json  micro-grid.json
src/hybrid_delivery_router/static/: index.html
tests/: test_disruptions.py  test_hybrid_delivery_router.py  test_search_correctness.py  test_tracing.py  test_validation.py
