[project]
name = "hybrid-delivery-router"
version = "0.1.0"
description = "A hybrid A* and fuzzy-logic delivery router with reactive replanning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
